# learn

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package.json  start.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/application/dto/: agent_dto.py  report_dto.py  task_dto.py
backend/app/application/interfaces/: agent_repository_interface.py
backend/app/application/services/: report_service.py  task_service.py
backend/app/config/: constants.py  settings.py
backend/app/domain/entities/: evidence.py  report.py  task.py
backend/app/domain/services/: workflow_service.py
backend/app/infrastructure/: demo_data.py
backend/app/infrastructure/agents/: base.py  compare_agent.py  compare_prompt.py  gate_agent.py  insight_agent.py  insight_prompt.py  planner_agent.py  planner_prompt.py  report_agent.py  report_prompt.py  research_agent.py  research_prompt.py  review_agent.py  review_prompt.py  strategy_agent.py  strategy_prompt.py
backend/app/infrastructure/llm/: client.py
backend/app/infrastructure/persistence/: database.py  file_store.py
backend/app/infrastructure/tools/: dimension_router.py  evidence_clustering.py  evidence_evaluator.py  export_tool.py  llm_router.py  research_source.py  search_tool.py  source_router.py  tavily_tool.py  (+1 more)
backend/app/utils/: state_reader.py
backend/tests/integration/: test_api.py  test_e2e_pipeline.py  test_llm_client.py  test_planner_agent.py  test_research_agent.py
backend/tests/unit/: test_schemas.py  test_state.py
(+50 files in other folders)
